# django-identityfield

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
identityfield/: apps.py
tests/: conftest.py  manage.py  settings.py  test_identity.py  urls.py
tests/app/: apps.py  models.py
tests/app/migrations/: 0001_initial.py
