[project]
name = "django-identityfield"
version = "0.1.2"
description = "Auto-incrementing fields like Django AutoField but without restrictions!"
license = "MIT"
authors = [{ name = "Petr Přikryl", email = "nich@seznam.cz" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
]

[dependency-groups]
dev = [
    "psycopg>=3.2.10",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "testcontainers[postgres]>=4.13.1",
]

[project.urls]
Homepage = "https://github.com/petrprikryl/django-identityfield"
Repository = "https://github.com/petrprikryl/django-identityfield"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "identityfield"
module-root = ""
